Fixed header alignment

--- a/src/styles/pages/index.styl
+++ b/src/styles/pages/index.styl
@@ -9,32 +9,31 @@
 
 .pages
 
+	.header
+		text-align center
+
 	.logo
 		width 77px
 		height 77px
-		position: absolute
-		top 20px
-		left 50%
-		margin-left -(@width / 2)
+		position relative
+		margin 0 auto
+		margin-top 20px
+		display block
 
 	.bold_line, .thin_line
 		width 50px
 		height 4px
-		position absolute
-		top 117px
-		left 50%
-		margin-left -(@width / 2)
+		position relative
+		margin 0 auto
+		margin-top 20px
 		background-color main_color
 
 	.thin_line
 		height 1px
-		top 165px
+		margin-top 15px
 
 	.title
 		font-family font_cond_book
 		color main_color
 		text-transform uppercase
-		top 135px
-		position absolute
-		display block
-		left 50%
+		margin-top 15px
